--- a/.github/workflows/push_worker.yml
+++ b/.github/workflows/push_worker.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: worker
-          file: Dockerfile
+          file: worker/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-worker:latest
