--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: client
-          file: Dockerfile
+          file: client/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-client:latest
