--- a/.github/workflows/push_nginx.yml
+++ b/.github/workflows/push_nginx.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: nginx
-          file: Dockerfile
+          file: nginx/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-nginx:latest
