--- a/.github/workflows/push_server.yml
+++ b/.github/workflows/push_server.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: server
-          file: Dockerfile
+          file: server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-server:latest
