--- a/.github/workflows/test_client.yml
+++ b/.github/workflows/test_client.yml
@@ -1,14 +1,16 @@
-name: Build & Test Docker Client Container
+name: Test Docker Client
 
 on:
   push:
     branches:
       - 'main'
-
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -16,12 +18,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       -
-        name: Build Client Image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
-          docker run -e CI=true ${{ secrets.DOCKERHUB_USERNAME }}/react-test:latest npm test
+        name: Build a test image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
+
+      - name: Test
+        run: docker run -e CI=true ${{ secrets.DOCKERHUB_USERNAME }}/react-test:latest npm test
