--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -28,4 +28,4 @@ jobs:
           context: client
           file: client/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-client:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
