--- a/.github/workflows/push_nginx.yml
+++ b/.github/workflows/push_nginx.yml
@@ -28,4 +28,4 @@ jobs:
           context: nginx
           file: nginx/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-nginx:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-nginx:latest
