--- a/.github/workflows/push_server.yml
+++ b/.github/workflows/push_server.yml
@@ -28,4 +28,4 @@ jobs:
           context: server
           file: server/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/multi-server:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-server:latest
