--- a/.github/workflows/push_worker.yml
+++ b/.github/workflows/push_worker.yml
@@ -25,7 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: worker
-          file: worker/Dockerfile
+          context: ./worker
+          file: ./worker/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-worker:latest
