--- a/.github/workflows/test_client.yml
+++ b/.github/workflows/test_client.yml
@@ -23,7 +23,7 @@ jobs:
 
       -
         name: Build a test image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/react-test -f ./client/Dockerfile.dev ./client
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/react-test -f client/Dockerfile.dev client
 
       - name: Test
         run: docker run -e CI=true ${{ secrets.DOCKERHUB_USERNAME }}/react-test:latest npm test
