--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -25,7 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: complex/client 
+          context: complex
           file: complex/client/Dockerfile
           push: true
           tags: |
