--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -25,8 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: client
-          file: client/Dockerfile
+          file: ./client/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
