--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -23,9 +23,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
-          context: client/
+          context: client
           file: client/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
