--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - REDIS_PORT=$REDIS_PORT
       - PG_USER=$PG_USER
       - PG_HOST=$PG_HOST
-      - PG_DATABASE=$PGDATABASE
+      - PG_DATABASE=$PG_DATABASE
       - PG_PASSWORD=$PG_PASSWORD
       - PG_PORT=$PG_PORT
   worker:
