--- a/.github/workflows/push_client.yml
+++ b/.github/workflows/push_client.yml
@@ -29,4 +29,4 @@ jobs:
           context: ./client
           file: ./client/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-react:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
