--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Generate deployment package
-      run: zip -r complex.zip . -x '*.git*'
+      run: zip -r multi-docker.zip . -x '*.git*'
 
     - name: Get timestamp
       uses: gerred/actions/current-time@master
@@ -38,7 +38,7 @@ jobs:
         environment_name: Multi-docker-env
         version_label: "multi-docker-${{ steps.format-time.outputs.replaced }}"
         region: us-east-1
-        deployment_package: complex.zip
+        deployment_package: multi-docker.zip
 
     - name: Deployed
       run: echo "App Deployed to ELB"
